--- a/src/package.json
+++ b/src/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://vitorsaa2k.github.io/MemeGenerator",
   "name": "project",
   "dependencies": {
     "react": "17.0.2",
@@ -12,6 +13,8 @@
     "babel-preset-react": "*"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "webpack",
     "watch": "webpack -w"
   }
